--- a/d07/실습/실습9.css
+++ b/d07/실습/실습9.css
@@ -16,9 +16,9 @@ a {
 }
 
 /* ===================== 레이아웃 CSS ===================== */
-#wrap {
+/* #wrap {
 
-}
+} */
 
 #header {
     width: 100%;
