--- a/d07/실습/실습10.css
+++ b/d07/실습/실습10.css
@@ -3,6 +3,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    /*border:1px solid red;*/
 }
 
 li {
@@ -17,50 +18,54 @@ a {
 #header {
     width: 1280px;
     height: 250px;
+    margin: 0 auto;
 }
 
 /* ================= Contents ================= */
 #contents {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 1280px;
     margin: 0 auto;
 }
 
 #left-box {
     display: flex;
-    width: 600px;
 }
 
 #right-box {
-    width: 680px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 300px;
 }
 
 #left-box > img {
     width: 500px;
+    margin-right: 50px;
 }
 
-#right-box > div > img {
+#right-box > #logo {
     background-image: url('img/icons_instagram.png');
     background-position: 0px -52px;
     background-repeat: no-repeat;
     background-size: auto;
     width: 175px;
     height: 51px;
+    margin: 20px auto;
 }
 
 #right-box > div > .input {
-    width: 250px;
+    width: 300px;
     height: 40px;
-    background-color: #eeeeee;
+    background-color: #fafafa;
     padding: 7px;
-    border: 1px solid grey;
+    border: 1px solid #dddddd;
     border-radius: 3px;
     margin: 3px 0;
 }
 
 #right-box > div > #login {
-    width: 250px;
+    width: 300px;
     height: 40px;
     background-color: #808dfb;
     color: white;
@@ -68,14 +73,121 @@ a {
     border-radius: 10px;
     font-size: 16px;
     font-weight: bold;
+    margin: 7px 0;
+}
+
+#right-box > div > p {
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    font-size: 14px;
+    font-weight: bold;
+    color: gray;
+}
+
+#right-box > div > p::before {
+    display: flex;
+    justify-content: space-between;
+    content: "";
+    width: 120px;
+    height: 1px;
+    background-color: lightgray;
+    margin-right: 10px;
+}
+
+#right-box > div > p::after {
+    display: flex;
+    justify-content: space-between;
+    content: "";
+    width: 120px;
+    height: 1px;
+    background-color: lightgray;
+    margin-left: 10px;
+}
+
+#right-box > #facebook {
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#right-box > a > #emp {
+    font-size: 16px;
+    font-weight: bold;
+    color: #808dfb;
+    margin: 15px 0px;
+}
+
+#right-box > a > #icon {
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
+}
+
+#right-box > #emp2 {
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    color: #808dfb;
+    margin-top: 10px;
+}
+
+#right-box > #emp3 {
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+}
+
+#right-box > div > .register {
+    color: #5f66f7;
+    font-weight: bold;
+    padding-left: 5px;
 }
 
 /* ================= Footer ================= */
 #footer {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     width: 1280px;
     margin: 0 auto;
+    color: grey;
+}
+
+#footer-top {
+    display: flex;
+    justify-content: center;
+    margin-top: 180px;
+}
+
+#footer-top li > a {
+    padding: 0 10px;
+}
+
+#footer-bottom {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+#footer-bottom select {
+    width: 60px;
+    border: none;
+    color: grey;
+    font-size: 12px;
+}
+
+#footer-bottom li {
+    padding: 0 10px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: center;
 }
 
 #footer li {
