--- a/project/2_daangn/sidebar.css
+++ b/project/2_daangn/sidebar.css
@@ -26,7 +26,7 @@ a {
     margin: 20px;
 } /* 사이드바 기본 설정 */
 
-.title {
+.sidebar_title {
     border-top: 1px solid #eeeeee;
     padding-top: 25px;
     padding-bottom: 20px;
@@ -147,6 +147,7 @@ a {
     padding: 8px 10px;
     border: 1px solid #cccccc;
     border-radius: 5px;
+    color: black;
 } /* 가격 인풋 디자인 */
 
 .submit {
