--- a/project/2_daangn/header.css
+++ b/project/2_daangn/header.css
@@ -14,7 +14,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 80%;
   height: 60px;
   background-color: white;
   padding: 0 100px;
@@ -22,7 +22,7 @@
 }
 
 .container {
-  margin-top: 60px; /* top-bar 만큼 아래로 밀어주기 */
+  margin-top: 60px; 
 }
 
 .menu_top {
