--- a/project/2_daangn/buy_sell.css
+++ b/project/2_daangn/buy_sell.css
@@ -124,5 +124,40 @@ a {
 
 /* ================= 하단 이미지 ================= */
 #bottom_image {
-    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 360px;
+    background-color: #fff2ec;
+    margin-top: 60px;
 } /* 하단 이미지 간격 조절 */
+
+#bottom_wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1240px;
+    margin: 0 auto;
+}
+
+.bottom_image_top {
+    font-size: 32px;
+    font-weight: bold;
+    color: orangered;
+}
+
+.bottom_image_bottom {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.bottom_image {
+    width: 120px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.bottom_right_image {
+    height: 360px;
+}
