--- a/project/2_daangn/header.css
+++ b/project/2_daangn/header.css
@@ -50,17 +50,43 @@
     padding: 8px 14px;
     border-radius: 10px;
     font-weight: bold;
+    cursor: pointer;
 }
 
-.search_bar {
-    margin-top: 20px;
+.search_area {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-family: system-ui, sans-serif;
+  justify-content: center;
+  margin-top: 40px;
+  font-size: 14px;
+  
+}
+
+.location_btn {
+    background-color: #797985;
+    color: #fff;
+    padding: 10px 16px;
+    border-radius: 50px;
+    border: none;
     display: flex;
-    gap: 10px;
     align-items: center;
-    background-color: #f7f7f7;
-    border: 1px black;
-    padding: 10px 15px;
-    border-radius: 20px;
+    cursor: pointer;
+}
+
+
+
+.search_bar {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50px;
+    gap: 10px;
+    padding: 8px 12px;
+    width: 1280px;
+    cursor: pointer;
 }
 
 .category_select,
@@ -69,6 +95,7 @@
     border: none;
     background: none;
     font-size: 14px;
+    cursor: pointer;
 }
 
 .search_input {
