--- a/project/2_daangn/jsheader.css
+++ b/project/2_daangn/jsheader.css
@@ -2,26 +2,29 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
 }
-
 a{ text-decoration: none; }
 li{ list-style: none; }
 
 #main_header {
+    /* padding: 20px 40px; */
+    /* border-bottom: 1px solid #eee; */
     position: sticky;
     top:0px;
     padding: 5px 10px;
     background: #fff;
     z-index: 1;
 }
-
 .menu_top {
+    /* position: fixed;
     top: 0;
     left: 0; 
     width: 80%; 
-    height: 72px; 
+    height: 60px; 
     background-color: white; 
+    padding: 0 100px; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05); */
     max-width: 1240px;
     margin: 0 auto;
     display: flex;
@@ -36,20 +39,31 @@ li{ list-style: none; }
 
 .main_menu {
     display: flex;
+    /* gap: 20px; */
+    /* list-style: none; */
 }
-
 .main_menu > li{
     position: relative;
     padding: 20px 15px;
+    
 }
-
 .main_menu > li > a {
+    /* text-decoration: none; */
     display: block;
     color: rgba(0,0,0,.9);
     font-size: 15px;
-    font-weight:500
+    font-weight:500;
 }
 
+.main_menu > li:nth-child(2) > a::after, .main_menu > li:nth-child(4) > a::after{
+    content:"";
+    display: inline-block; 
+    width: 15px;
+    height: 15px;
+    background: url(img/icon_arrow_down.png) no-repeat right 8px;
+    background-size: 11px;
+    opacity: .5;
+}
 .sub_menu{
     display: none;
     position: absolute;
@@ -78,7 +92,6 @@ li{ list-style: none; }
     border-radius: 5px;
     transition:.2s ease;
 }
-
 .app_download {
     background-color: orangered;
     color: white;
@@ -89,46 +102,15 @@ li{ list-style: none; }
     cursor: pointer;
 }
 
-.search_area {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  font-family: system-ui, sans-serif;
-  justify-content: center;
-  margin-top: 6px;
-  font-size: 14px;  
-}
-
-.location_btn {
-    background-color: #ccc;
-    color: black;
-    padding: 15px 20px;
-    border-radius: 50px;
-    max-width: 95px;
-    max-height: 40px;
-    font-weight: bold;
-    border: none;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-
-}
-
-
-
 .search_bar {
+    margin-top: 20px;
     display: flex;
-    align-items: center;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 50px;
     gap: 10px;
-    flex: 1;
-    padding: 8px 16px;
-    max-width: 1150px;
-    max-height: 40px;
-    cursor: pointer;
-    
+    align-items: center;
+    background-color: #f7f7f7;
+    border: 1px black;
+    padding: 10px 15px;
+    border-radius: 20px;
 }
 
 .category_select,
@@ -137,7 +119,6 @@ li{ list-style: none; }
     border: none;
     background: none;
     font-size: 14px;
-    cursor: pointer;
 }
 
 .search_input {
@@ -157,11 +138,7 @@ li{ list-style: none; }
 }
 
 .keyword_bar {
-    margin-top: 12px;
-    max-width: 1240px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 20px;
+    margin-top: 10px;
 }
 
 .keywords {
@@ -170,21 +147,21 @@ li{ list-style: none; }
     justify-content: center;
     list-style: none;
     color: #555;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .keywords a {
     text-decoration: none;
-    color: rgb(65, 65, 65);
+    color: black;
     font-size: 14px;
 }
 
-.keywords li a {
+.keywords li {
   margin-right: 15px;
 }
 
 .populer {
     color: gray;
+    font-weight: bold;
     font-size: 15px;
-    margin-right: 10px;
 }
